test/org/midica/testfiles/failing/function-in-meta.midica
INCLUDE inc/instruments.midica

META
	FUNCTION
	END
END